--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             align-items: center;
             height: 100vh;
             margin: 0;
+            background: #88f878;
             animation: colorChange 8s infinite;
         }
         #container {
