feat(index): tweak default color

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            background: #88f878;
+            background: #f6bcff;
             animation: colorChange 8s infinite;
         }
         #container {
